; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-x264/extr_obs-x264.c_obs_x264_update.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-x264/extr_obs-x264.c_obs_x264_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_x264 = type { i32, i32 }

@.str = private unnamed_addr constant [26 x i8] c"Failed to reconfigure: %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*)* @obs_x264_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @obs_x264_update(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.obs_x264*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.obs_x264*
  store %struct.obs_x264* %10, %struct.obs_x264** %6, align 8
  %11 = load %struct.obs_x264*, %struct.obs_x264** %6, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @update_settings(%struct.obs_x264* %11, i32* %12, i32 1)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %32

16:                                               ; preds = %2
  %17 = load %struct.obs_x264*, %struct.obs_x264** %6, align 8
  %18 = getelementptr inbounds %struct.obs_x264, %struct.obs_x264* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.obs_x264*, %struct.obs_x264** %6, align 8
  %21 = getelementptr inbounds %struct.obs_x264, %struct.obs_x264* %20, i32 0, i32 0
  %22 = call i32 @x264_encoder_reconfig(i32 %19, i32* %21)
  store i32 %22, i32* %8, align 4
  %23 = load i32, i32* %8, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %16
  %26 = load i32, i32* %8, align 4
  %27 = call i32 @warn(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %26)
  br label %28

28:                                               ; preds = %25, %16
  %29 = load i32, i32* %8, align 4
  %30 = icmp eq i32 %29, 0
  %31 = zext i1 %30 to i32
  store i32 %31, i32* %3, align 4
  br label %33

32:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %33

33:                                               ; preds = %32, %28
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @update_settings(%struct.obs_x264*, i32*, i32) #1

declare dso_local i32 @x264_encoder_reconfig(i32, i32*) #1

declare dso_local i32 @warn(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
